<resources>
    <string name="app_name">PokeDex</string>
    <string name="password">Senha</string>
    <string name="passwordConfirm">Confirmação de senha</string>
    <string name="email">Email</string>
    <string name="login">Entrar</string>
    <string name="createAccount">Criar conta</string>
    <string name="haveAnAccount">Já tenho uma conta</string>
    <string name="error_valid_email_password">Email e/ou Senha Inválido(s)</string>
    <string name="name">Nome</string>
    <string name="user_create_success_message">Usuario criado com sucesso</string>
    <string name="error_email_exists">Existe outra conta com esse email</string>
    <string name="profile">Perfil</string>
    <string name="favorites">Favoritos</string>
    <string name="pokedex">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updateProfile">Alterar Perfil</string>
    <string name="user_update_error">Nao foi possivel atualizar o usuario</string>
    <string name="user_update_success">Atualizado com sucesso</string>
    <string name="deleteProfile">Deletar perfil</string>
    <string name="confirmDelete">Confirmar Exclusão</string>
    <string name="confirmDeleteMessage">Deseja realmente deletar o perfil ?</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="deleteCanceled">"Exclusão cancelada "</string>
    <string name="deleteSuccess">Excluido com sucesso</string>
</resources>